<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/crime_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/crime_title"
        android:hint="@string/crime_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:text="@string/crime_details_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text=""
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label"
        />
    <Button
        android:text="@string/crime_suspect_text"
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:text="@string/crime_report_text"
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>